adding class dropdown-menu-end to dropdown menu in dashboard page

--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
                 class="rounded-circle user-avatar"
               />
             </a>
-            <ul class="dropdown-menu text-small">
+            <ul class="dropdown-menu dropdown-menu-end text-small">
               <li>
                 <a
                   class="dropdown-item d-flex align-items-center gap-3"
